@@ -1,0 +1,18 @@
+Regression test for https://bugs.webkit.org/show_bug.cgi?id=32888 : Garbage in transparent regions of images uploaded as textures
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+Checking lower left corner
+PASS buf[idx] == 0 && buf[idx + 1] == 0 && buf[idx + 2] == 0 is true
+PASS buf[idx] == 0 && buf[idx + 1] == 0 && buf[idx + 2] == 0 is true
+PASS buf[idx] == 0 && buf[idx + 1] == 0 && buf[idx + 2] == 0 is true
+PASS buf[idx] == 0 && buf[idx + 1] == 0 && buf[idx + 2] == 0 is true
+Checking upper left corner
+PASS buf[idx] == 0 && buf[idx + 1] == 0 && buf[idx + 2] == 0 is true
+PASS buf[idx] == 0 && buf[idx + 1] == 0 && buf[idx + 2] == 0 is true
+PASS buf[idx] == 0 && buf[idx + 1] == 0 && buf[idx + 2] == 0 is true
+PASS buf[idx] == 0 && buf[idx + 1] == 0 && buf[idx + 2] == 0 is true
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
