@@ -1,3 +1,15 @@
+2009-12-22  Kenneth Russell  <kbr@google.com>
+
+        Reviewed by Eric Seidel.
+
+        [Chromium] Garbage in transparent regions of images uploaded as textures
+        https://bugs.webkit.org/show_bug.cgi?id=32888
+
+        Test: fast/canvas/webgl/bug-32888.html (works in Safari / DumpRenderTree)
+
+        * src/GraphicsContext3D.cpp:
+        (WebCore::GraphicsContext3D::texImage2D):
+
 2009-12-22  Adam Langley  <agl@google.com>
 
         Build fix: not reviewed.
